--- a/.gitignore
+++ b/.gitignore
@@ -57,18 +57,17 @@
 # ------------------------------------------------------------------
 /drush/Commands/contrib/
 /web/core/
-#/web/modules/contrib/
-#/web/themes/contrib/
+/web/modules/contrib/
+/web/themes/contrib/
 /web/profiles/contrib/
 /web/libraries/
-/web/private/scripts/quic
-
+/web/private/scripts/quicksilver
 
 
 # Generally you should only ignore the root vendor directory. It's important
 # that core/assets/vendor and any other vendor directories within contrib or
 # custom module, theme, etc., are not ignored unless you purposely do so.
-#/vendor/
+/vendor/
 
 # Ignore other scaffold files
 #
