--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,14 @@
         }
     ],
     "require": {
-        "composer/installers": "^2.2",
+        "composer/installers": "^2.0",
         "drupal/admin_toolbar": "^3.4",
         "drupal/better_exposed_filters": "^6.0",
         "drupal/block_field": "^1.0@RC",
         "drupal/bootstrap5": "^3.0",
         "drupal/bootstrap_multiselect": "^2.0",
         "drupal/chosen": "^4.0",
+        "drupal/contact_storage": "^1.3",
         "drupal/core-composer-scaffold": "^10.1",
         "drupal/core-project-message": "^10.1",
         "drupal/core-recommended": "^10.1",
@@ -36,9 +37,11 @@
         "drupal/paragraphs": "^1.15",
         "drupal/password_policy": "^4.0",
         "drupal/pathauto": "^1.11",
+        "drupal/prlp": "^1.10",
         "drupal/rate": "^3.0",
         "drupal/recaptcha_v3": "^2.0",
         "drupal/security_review": "^2.0",
+        "drupal/simple_pass_reset": "^1.2",
         "drupal/tagify": "^1.0",
         "drupal/twig_tweak": "^3.2",
         "drupal/views_ajax_history": "^1.7",
