--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "drupal/core-composer-scaffold": "^10.1",
         "drupal/core-project-message": "^10.1",
         "drupal/core-recommended": "^10.1",
+        "drush/drush": "^11 || ^12",
         "drupal/email_registration": "^1.2",
         "drupal/entity_usage": "^2.0@beta",
         "drupal/entityqueue": "^1.7",
