--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "drupal/block_field": "^1.0@RC",
         "drupal/bootstrap5": "^3.0",
         "drupal/bootstrap_multiselect": "^2.0",
-        "drupal/chosen": "^4.0",
+        "drupal/chosen": "*",
         "drupal/contact_storage": "^1.3",
         "drupal/core-composer-scaffold": "^10.1",
         "drupal/core-project-message": "^10.1",
@@ -57,7 +57,10 @@
         "drupal/views_bulk_operations": "^4.2",
         "drupal/views_show_more": "^2.0",
         "drupal/votingapi": "^3.0@beta",
-        "drush/drush": "^11 || ^12"
+        "drush/drush": "^11 || ^12",
+        "harvesthq/chosen": "*",
+        "mnsami/composer-custom-directory-installer": "*",
+        "oomphinc/composer-installers-extender": "*"
     },
     "conflict": {
         "drupal/drupal": "*"
@@ -71,7 +74,9 @@
             "drupal/core-project-message": true,
             "phpstan/extension-installer": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
-            "cweagans/composer-patches": true
+            "cweagans/composer-patches": true,
+            "oomphinc/composer-installers-extender": true,
+            "mnsami/composer-custom-directory-installer": true
         },
         "sort-packages": true
     },
@@ -91,6 +96,9 @@
         "installer-paths": {
             "web/core": [
                 "type:drupal-core"
+            ],
+            "web/libraries/chosen": [
+                "harvesthq/chosen"
             ],
             "web/libraries/{$name}": [
                 "type:drupal-library",
@@ -119,7 +127,7 @@
             ]
         },
         "installer-types": [
-            "library"
+            "drupal-library"
         ],
         "drupal-core-project-message": {
             "include-keys": [
