--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "drupal/recaptcha_v3": "^2.0",
         "drupal/security_review": "^2.0",
         "drupal/simple_pass_reset": "^1.2",
+        "drupal/smtp": "*",
         "drupal/tagify": "^1.0",
         "drupal/twig_tweak": "^3.2",
         "drupal/views_ajax_history": "^1.7",
